<resources>
    <string name="app_name">stock</string>

    <string name="network_host_stock">http://47.104.27.243/</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="my_position">我的持仓</string>

    <string name="stock_k_realtime">分时</string>
    <string name="stock_k_1m">1分</string>
    <string name="stock_k_5m">5分</string>
    <string name="stock_k_15m">15分</string>
    <string name="stock_k_30m">30分</string>
    <string name="stock_k_1h">1小时</string>
    <string name="stock_k_1d">日线</string>


    <string name="stock_k_realtime_s">0</string>
    <string name="stock_k_1m_s">1</string>
    <string name="stock_k_5m_s">2</string>
    <string name="stock_k_15m_s">3</string>
    <string name="stock_k_30m_s">4</string>
    <string name="stock_k_1h_s">5</string>
    <string name="stock_k_1d_s">6</string>


    <string name="stock_by_increase">买涨</string>
    <string name="stock_by_decrease">买跌</string>
    <string name="stock_by_without">挂单</string>
    <string name="stock_SMA">SMA</string>
    <string name="stock_EMA">EMA</string>
    <string name="stock_BOLL">BOLL</string>
    <string name="stock_MACD">MACD</string>
    <string name="stock_KDJ">KDJ</string>
    <string name="stock_RSI">RSI</string>
    <string name="trade_open_position">建仓</string>

    <array name="stock_k">
        <item>@string/stock_k_1m</item>
        <item>@string/stock_k_5m</item>
        <item>@string/stock_k_15m</item>
        <item>@string/stock_k_30m</item>
        <item>@string/stock_k_1h</item>
        <item>@string/stock_k_1d</item>
    </array>

    <string name="format_trade_">6</string>
    <string name="buy_up">买涨</string>
    <string name="buy_down">买跌</string>
    <string name="buy_type">类型</string>
    <string name="buy_amount">数量</string>
    <string name="buy_stop">止损</string>
    <string name="buy_limit">止盈</string>
    <string name="buy_defer">过夜费</string>
    <string name="buy_defer_check">是否过夜</string>
    <string name="buy_fee">手续费</string>
    <string name="none">无</string>
    <string name="format_cost">%.1f元</string>
    <string name="format_defer">%.1f元/天</string>
    <string name="format_trade_amount_up">共%.1f%s，涨1个点可赚%.2f元。</string>
    <string name="format_trade_amount_down">共%.1f%s，跌1个点可赚%.2f元。</string>
    <string name="total">总价(元)</string>
    <string name="total_asset">总资产(元)</string>
    <string name="left_asset">可用余额(元)</string>
    <string name="buy_stock">下单</string>
    <string name="trade_succ">恭喜您建仓成功</string>
    <string name="position_view">查看持仓</string>
    <string name="machposition_view">查看挂单</string>
    <string name="continu_trade">继续交易</string>
    <string name="format_my_position">我的持仓(%d)</string>
    <string name="format_my_machposition">我的挂单(%d)</string>
    <string name="format_lot">%d手</string>
    <string name="profit_and_loss">盈亏</string>
    <string name="profit_and_loss_yuan">盈亏(元)</string>
    <string name="format_buy_price">建仓价：%.0f</string>
    <string name="format_buy_open_charge">手续费: %.1f元</string>
    <string name="format_buy_deferred_free">过夜费: 用券不过夜</string>
    <string name="format_buy_deferred">过夜费: %.1f元/天</string>
    <string name="format_buy_deferred_all">过夜费: %.1f元</string>
    <string name="format_float_num_up">浮动点: 上升%.1f点</string>
    <string name="format_float_num_down">浮动点: 下跌%.1f点</string>
    <string name="format_num_up">上升%.0f点</string>
    <string name="format_num_down">下跌%.0f点</string>
    <string name="format_limit">止盈点: %.0f点</string>
    <string name="format_limit_value">%.0f点</string>
    <string name="format_limit_none">止盈点: 无</string>
    <string name="format_stop">止损点: %.0f点</string>
    <string name="format_stop_value">%.0f点</string>
    <string name="format_stop_none">止损点: 无</string>
    <string name="format_point">%.0f点</string>
    <string name="format_voucher_amount">%.0f元券%d张</string>
    <string name="format_label">%s:%.4f</string>
    <string name="close_position">平仓</string>

    <string name="modify">修改</string>
    <string name="trade_his">交易记录</string>

    <string name="buy_price">建仓价：</string>
    <string name="close_price">平仓价：</string>
    <string name="buy_price_yuan">建仓价(元)：</string>
    <string name="close_price_yuan">平仓价(元)：</string>
    <string name="float_num">浮动点：</string>
    <string name="limit_point">止盈点：</string>
    <string name="stop_point">止损点：</string>
    <string name="open_time">建仓时间：</string>
    <string name="close_time">平仓时间：</string>
    <string name="open_cost">建仓成本：</string>
    <string name="close_type">平仓类型：</string>
    <string name="open_charge">手续费：</string>
    <string name="deffer_charge">过夜费：</string>
    <string name="buy_method">购买方式：</string>
    <string name="no_trade">暂无交易记录</string>
    <string name="my_machposition">我的挂单</string>
    <string name="position_modify">修改持仓</string>
    <string name="succ">成功</string>
    <string name="position_close_verify">确定平仓吗？</string>
    <string name="position_open_succ">恭喜您建仓成功</string>
    <string name="machposition_open_succ">恭喜您挂单成功</string>
    <string name="mach_price">挂单价</string>
    <string name="format_mach_error">（允许%d点误差）</string>

    <string name="format_mach_price">成本: %.1f元</string>
    <string name="format_amount">数量: %s</string>
    <string name="format_price">%.1f元/手</string>
    <string name="valid_time">有效期</string>
    <string name="cancel_time">撤销时间</string>

    <string name="mach_price_remind">请输入挂单价</string>
    <string name="mach_price_mistake_remind1">允许成交价于挂单价上下</string>
    <string name="mach_price_mistake_remind2">100</string>
    <string name="mach_price_mistake_remind3">点的误差</string>
    <string name="undo">撤销</string>
    <string name="mach_remind">1. 挂单后不会冻结建仓所需资金或代金券，请确保挂单触发时账户内有足够的资金余额和代金券用于建仓；\n\n 2. 同一品种在同一价格上只能挂一单；\n\n 3. 挂单的有效期为3个交易日，例如周二挂单，则周四休市后挂单自动失效。</string>
    <string name="expanc">展开</string>
    <string name="pack_up">收起</string>
    <string name="deffer_list_title">持仓过夜费</string>
    <string name="mach_position_help">挂单帮助</string>
    <string name="no_position">暂无持仓记录，去建仓</string>
    <string name="no_machposition">当前暂无挂单</string>

    <string name="machposition_motify_succ">修改挂单成功</string>
    <string name="machposition_his_title">— 历史挂单记录 —</string>
    <string name="delete_machposition">确定撤销挂单？</string>
    <string name="voucher_limit_remind">用券默认止盈10%，止损10%</string>
    <string name="voucher_deffer_remind">用券不过夜</string>
    <string name="voucher_fee_remind">0元</string>
    <string name="open">开盘</string>
    <string name="close">收盘</string>
    <string name="low">最低</string>
    <string name="high">最高</string>
    <string name="no_deffer_voucher">过夜费：用券不过夜</string>
    <string name="no_deffer">过夜费：不过夜</string>


</resources>
