<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>


        <variable
            name="candle"
            type="com.github.mikephil.charting.data.CandleEntry" />
        <import type="com.zxzx74147.devlib.utils.FormatUtil"/>

    </data>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal">


        <View
            android:layout_width="0dp"
            android:layout_height="1px"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/open"
                android:textColor="@color/text_grey2"
                android:textSize="@dimen/default_size_26" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/default_gap_10"
                android:text="@{FormatUtil.formatWithoutZero(candle.getOpen(),@string/format_01)}"
                android:textColor="@color/text_black"
                android:textSize="@dimen/default_size_26" />

        </LinearLayout>

        <View
            android:layout_width="0dp"
            android:layout_height="1px"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/close"
                android:textColor="@color/text_grey2"
                android:textSize="@dimen/default_size_26" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/default_gap_10"
                android:text="@{FormatUtil.formatWithoutZero(candle.getClose(),@string/format_01)}"
                android:textColor="@color/text_black"
                android:textSize="@dimen/default_size_26" />

        </LinearLayout>

        <View
            android:layout_width="0dp"
            android:layout_height="1px"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/high"
                android:textColor="@color/text_grey2"
                android:textSize="@dimen/default_size_26" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/default_gap_10"
                android:text="@{FormatUtil.formatWithoutZero(candle.getHigh(),@string/format_01)}"
                android:textColor="@color/red"
                android:textSize="@dimen/default_size_26" />

        </LinearLayout>

        <View
            android:layout_width="0dp"
            android:layout_height="1px"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/low"
                android:textColor="@color/text_grey2"
                android:textSize="@dimen/default_size_26" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/default_gap_10"
                android:text="@{FormatUtil.formatWithoutZero(candle.getLow(),@string/format_01)}"
                android:textColor="@color/green"
                android:textSize="@dimen/default_size_26" />

        </LinearLayout>

        <View
            android:layout_width="0dp"
            android:layout_height="1px"
            android:layout_weight="1" />
    </LinearLayout>

</layout>