<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="price"
            type="com.zxzx74147.stock.data.Price" />

        <variable
            name="dataParse"
            type="com.zxzx74147.stock.indicator.DataParse" />
    </data>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">


        <android.support.constraint.ConstraintLayout
            android:id="@+id/kline_other"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            app:layout_constraintEnd_toStartOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.github.mikephil.charting.mychart.MyCombinedChart
                android:id="@+id/kline"
                android:layout_width="0dp"
                android:paddingTop="@dimen/default_gap_5"
                android:paddingBottom="@dimen/default_gap_3"
                android:layout_height="0dp"
                app:layout_constraintDimensionRatio="750:389"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.github.mikephil.charting.mychart.MyCombinedChart
                android:id="@+id/kline2"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintDimensionRatio="750:93"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/kline" />

            <!--<LinearLayout-->
                <!--android:layout_width="wrap_content"-->
                <!--android:orientation="horizontal"-->
                <!--app:layout_constraintTop_toTopOf="@+id/kline"-->
                <!--app:layout_constraintStart_toStartOf="@+id/kline"-->
                <!--android:layout_height="wrap_content">-->
                <!--<TextView-->
                    <!--android:id="@+id/klinetext1"-->
                    <!--android:textSize="@dimen/default_size_20"-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content" />-->
                <!--<TextView-->
                    <!--android:id="@+id/klinetext2"-->
                    <!--android:layout_marginLeft="@dimen/default_gap_10"-->
                    <!--android:textSize="@dimen/default_size_20"-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content" />-->
                <!--<TextView-->
                    <!--android:layout_marginLeft="@dimen/default_gap_10"-->
                    <!--android:id="@+id/klinetext3"-->
                    <!--android:textSize="@dimen/default_size_20"-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content" />-->
            <!--</LinearLayout>-->

            <!--<LinearLayout-->
                <!--android:layout_width="wrap_content"-->
                <!--android:orientation="horizontal"-->
                <!--app:layout_constraintTop_toTopOf="@+id/kline2"-->
                <!--app:layout_constraintStart_toStartOf="@+id/kline2"-->
                <!--android:layout_height="wrap_content">-->
                <!--<TextView-->
                    <!--android:id="@+id/kline2text1"-->
                    <!--android:textSize="@dimen/default_size_20"-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content" />-->
                <!--<TextView-->
                    <!--android:id="@+id/kline2text2"-->
                    <!--android:layout_marginLeft="@dimen/default_gap_10"-->
                    <!--android:textSize="@dimen/default_size_20"-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content" />-->
                <!--<TextView-->
                    <!--android:layout_marginLeft="@dimen/default_gap_10"-->
                    <!--android:id="@+id/kline2text3"-->
                    <!--android:textSize="@dimen/default_size_20"-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content" />-->
            <!--</LinearLayout>-->

            <TextView
                android:layout_width="wrap_content"
                android:id="@+id/label1"
                android:textSize="@dimen/default_size_20"
                android:layout_height="wrap_content" />

            <FrameLayout
                android:id="@+id/select"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintDimensionRatio="750:71"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/kline2">

                <RadioGroup
                    android:id="@+id/kline_select"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/btn_sma"
                        style="@style/radiobutton_stock"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:checked="true"
                        android:text="@string/stock_SMA" />

                    <View
                        android:layout_width="1px"
                        android:layout_height="match_parent"
                        android:background="@color/stock_grid" />

                    <RadioButton
                        android:id="@+id/btn_ema"
                        style="@style/radiobutton_stock"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:button="@null"
                        android:text="@string/stock_EMA" />

                    <View
                        android:layout_width="1px"
                        android:layout_height="match_parent"
                        android:background="@color/stock_grid" />

                    <RadioButton
                        android:id="@+id/btn_boll"
                        style="@style/radiobutton_stock"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:button="@null"
                        android:text="@string/stock_BOLL" />

                    <View
                        android:layout_width="1px"
                        android:layout_height="match_parent"
                        android:background="@color/stock_grid" />
                </RadioGroup>


                <RadioGroup
                    android:id="@+id/indicator_select"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="right"
                    android:orientation="horizontal">

                    <View
                        android:layout_width="@dimen/default_gap_1"
                        android:layout_height="match_parent"
                        android:background="@color/stock_grid" />

                    <RadioButton
                        android:id="@+id/btn_macd"
                        style="@style/radiobutton_stock"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:checked="true"
                        android:text="@string/stock_MACD" />

                    <View
                        android:layout_width="@dimen/default_gap_1"
                        android:layout_height="match_parent"
                        android:background="@color/stock_grid" />

                    <RadioButton
                        android:id="@+id/btn_kdj"
                        style="@style/radiobutton_stock"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:button="@null"
                        android:text="@string/stock_KDJ" />

                    <View
                        android:layout_width="1px"
                        android:layout_height="match_parent"
                        android:background="@color/stock_grid" />

                    <RadioButton
                        android:id="@+id/btn_rsi"
                        style="@style/radiobutton_stock"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:button="@null"
                        android:text="@string/stock_RSI" />


                </RadioGroup>

            </FrameLayout>




        </android.support.constraint.ConstraintLayout>


        <com.github.mikephil.charting.mychart.MyCombinedChart
            android:id="@+id/kline_realtime"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />



    </android.support.constraint.ConstraintLayout>
</layout>